freemarker text align issue for no data tables

--- a/Stylesheets/src/Neptune/Components/Partials/_component-editor.scss
+++ b/Stylesheets/src/Neptune/Components/Partials/_component-editor.scss
@@ -699,6 +699,13 @@
 					width: 1px;
 					text-align: right;
 				}
+
+				.no_data {
+					.last-column {
+						width: auto;
+						text-align: left;
+					}
+				}
 			}
 		}
 
